packages/parser/test/parser/E0111-assignment-expression.txt
a +=
===== err =====
anonymous:1:5: ParseError: E0111 - Expected right-hand expression after `+=` operator
1 | a +=
  |     ^
